<?xml version="1.0" encoding="utf-8"?><!-- Layout for a single list item in the book list -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="15dp">

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1">


        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@color/colorSecondaryText" />

        <TextView
            android:id="@+id/quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/name"
            android:layout_marginTop="5dp"
            android:fontFamily="sans-serif"
            android:text="@string/list_item_quantity"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="@color/colorSecondaryText" />

        <TextView
            android:id="@+id/quantitySummary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/name"
            android:layout_marginStart="@dimen/listItem_marginStartWithinItem"
            android:layout_marginTop="5dp"
            android:layout_toEndOf="@+id/quantity"
            android:fontFamily="sans-serif"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="@color/colorAccent" />

        <TextView
            android:id="@+id/price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/name"
            android:layout_marginStart="@dimen/listItem_marginStart_NewItem"
            android:layout_marginTop="5dp"
            android:layout_toEndOf="@+id/quantitySummary"
            android:fontFamily="sans-serif"
            android:text="@string/list_item_price"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="@color/colorSecondaryText" />

        <TextView
            android:id="@+id/priceSummary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/name"
            android:layout_marginStart="@dimen/listItem_marginStartWithinItem"
            android:layout_marginTop="5dp"
            android:layout_toEndOf="@+id/price"
            android:fontFamily="sans-serif"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="@color/colorAccent" />
    </RelativeLayout>

    <Button
        android:id="@+id/saleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/textUnit_padding"
        android:background="@color/colorAccent"
        android:focusable="false"
        android:text="@string/Button_Sale"
        android:textColor="@color/colorTextonIcon" />
</LinearLayout>
